# gama

./: .gitignore  CONTRIBUTING.md  README.ja.md  README.md  RELEASING.md  pyproject.toml
.claude/: CONTEXT.md
.github/workflows/: ci.yml  publish.yml
examples/: meshflow.example.json
experiments/: moa_vs_strong.py
experiments/membrane_probe/: README.md  __init__.py  cases.py  run.py  test_membrane_probe.py
gama/: __init__.py  _json.py  backends.py  benchmark.py  cli.py  config.py  decorrelation.py  logger.py  market.py  meshflow.py  models.py  trinity.py
recipes/TEMPLATE/: config.json  recipe.md
recipes/mac-studio-mlx/: config.json  recipe.md
recipes/mac-studio-trinity/: config-122b.json  config.json  recipe.md
recipes/market-ollama/: recipe.md  results.json  run.py
recipes/meshflow-ollama/: config.json  recipe.md
recipes/ollama-official/: config.json  recipe.md
recipes/ollama-starter/: config.json  recipe.md
tests/: test_backends.py  test_benchmark.py  test_decorrelation.py  test_ensemble.py  test_gama.py  test_market.py  test_meshflow.py  test_ssh_openai_backend.py  test_tool.py  test_trinity.py
